# clicky

./: .gitignore  README.md  index.html  package.json  tooltip-overlay.html  vite.config.ts
docs/: 00-overview.md  01-macos-accessibility-fundamentals.md  02-project-architecture.md  03-swift-accessibility-layer.md  04-rust-bridge-layer.md  05-react-tree-viewer.md  06-realtime-tree-sync.md  07-tree-to-app-highlight.md  08-mouse-to-tree-inspector.md
public/: overlay.html
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/bridge/: mod.rs  swift_ffi.rs
src-tauri/src/commands/: accessibility.rs  mod.rs  monitor.rs  permission.rs
src-tauri/src/models/: ax_node.rs  mod.rs
src-tauri/src/overlay/: commands.rs  highlight_panel.rs  mod.rs  panel.rs  tooltip_panel.rs
src-tauri/src/state/: mod.rs  monitor_state.rs
src-tauri/swift/ClawAccessibility/: Package.resolved  Package.swift
src-tauri/swift/ClawAccessibility/Sources/ClawAccessibility/Core/: AXHelpers.swift  AxPermission.swift  AxTraversal.swift
src-tauri/swift/ClawAccessibility/Sources/ClawAccessibility/FFI/: Exports.swift
src-tauri/swift/ClawAccessibility/Sources/ClawAccessibility/Models/: AXNodeModel.swift
src-tauri/swift/ClawAccessibility/Sources/ClawAccessibility/Monitor/: FrontmostMonitor.swift
src-tauri/swift/ClawAccessibility/Sources/ClawAccessibility/Serialization/: JSONSerializer.swift  XMLSerializer.swift
src/hooks/: useAccessibilityTree.ts  usePermission.ts  useSelectedNode.ts
(+22 files in other folders)
